# c-hello-from-rust-sgx

./: .gitignore  Makefile  README.md  run.bash
app/: Cargo.toml  app  c-example  run.bash
app/src/: lib.rs  main.c
enclave/: Cargo.toml  Xargo.toml
